--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <html>
-    <body>
-        More coming soon...
-    </body>
 
-    <style>
-        * {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        }
-    </style>
+<body>
+    More coming soon...
+    <p>Kayleigh</p>
+</body>
+
+<style>
+    * {
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+</style>
+
 </html>
