--- a/index.html
+++ b/index.html
@@ -1,52 +1,4 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-
-        <!--BOOTSTRAP + JQUERY-->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        
-        <!--CUSTOM CSS/JS-->
-        <link rel="stylesheet" href="css/style.css">
-        <script type="text/javascript" src="js/main.js"></script>
-        
-        <!--GOOGLE/META-->
-        <link rel="" type="image/png" href="#"/>
-        <title></title>
-        <meta name="description" content="">
-        <meta name="keywords" content=""/>
-        <meta name="author" content="Michel van Heest"/>
-        <meta name="reply-to" content="contact@michelvanheest.com"/>
-    </head>
-    <body>
-
-        <section class="main-content">
-            <div class="content-container container">
-                <div class="content row">
-                    <div class="col-12">
-                        <img src="assets/img/different-logo.png" id="logo" alt="different logo">
-                        <img src="assets/img/diffərənt-text.png" id="h1" alt="different h1">
-                        <!-- <h1>diffərənt</h1> -->
-                        <span>Coming Soon</span>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="footer-content">
-            <div class="container">
-                <div class="links row">
-                    <div class="col-12">
-                        <a href="https://github.com/michelvanheest/different-designers" target="_blank">GitHub</a>
-                        <a href="https://diffrntworkspace.slack.com/" target="_blank">Contact</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-    </body>
-</html>
+---
+title: Home
+---
+<h1>{{ "Hello World!" | downcase }}</h1>
