Added Bootstrap to the complete website

--- a/rapportage.html
+++ b/rapportage.html
@@ -1,8 +1,15 @@
 ---
 title: Rapportage
 ---
-<h1>Rapportage</h1>
-<h2>Hier staat een subtitel waarin kort uitgelegd wordt dat alle rapportage in de vorm van verslagen en presentaties hier terug te vinden zijn.</h2>
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h1>Rapportage</h1>
+            </div>
+        </div>
+    </div>
+</section>
 
 <ul>
   {% for post in site.posts %}
