--- a/rapportage.html
+++ b/rapportage.html
@@ -1,10 +1,10 @@
 ---
 title: Rapportage
 ---
-<section id="rapportage-header">
+<section id="contentPage-header">
     <div class="container">
         <div class="row">
-            <div class="col-12">
+            <div class="col-12 offset-md-3 col-md-6">
                 <h1>Rapportage</h1>
                 <p class="p-big">Hier staat een subtitel waarin kort uitgelegd wordt dat alle rapportage in de vorm van verslagen en presentaties hier terug te vinden zijn.</p>
             </div>
@@ -12,13 +12,14 @@ title: Rapportage
     </div>
 </section>
 
-<section id="rapportage-postlist">
+<section id="contentPage-postlist">
     <div class="container">
         <div class="row">
             <div class="col-12">
                 <ul>
                 {% for post in site.posts %}
                     <li>
+                    <p>{{ post.opdracht }} - {{ post.date | date_to_string }}</p>
                     <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
                     <p>{{ post.excerpt }}</p>
                     </li>
