Finished boilerplate + editted readme

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 
     </head>
     <body>
-
+        <h1>Hello world</h1>
+        <p>dit is een test p</p>
         <!--CUSTOM JS-->
         <!-- <script type="text/javascript" src=""></script> -->
     </body>
