Build first version
Gebouwd t/m results, nog niet helemaal 100% responsive enzo

--- a/index.html
+++ b/index.html
@@ -28,8 +28,278 @@
 
     </head>
     <body>
-        <h1>Hello world</h1>
-        <p>dit is een test p</p>
+        
+        <header>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-md-12 col-xl-9">
+                        <h1>Adding motion to ANWB’s Design System Poncho</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-8 col-xl-6">
+                        <h4>een superhippe subtitle die kan wel over 2 regels heenvallen want dat is natuurlijk heel cool.</h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <a class="button button-secondary" href="assets/vid/different-anwb-casefilm.mp4" target="_blank" role="button">Play case-video</a>
+                    </div>
+                </div>
+                <!-- <iframe width="420" height="315" src="https://www.youtube.com/embed/7UR5Njw4D-o"></iframe> -->
+            </div>
+        </header>
+
+        <main>
+            <section class="sectionSpaceTop sectionSpaceBottom" id="challenge">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 offset-md-3 col-md-6">
+                            <h2>Our challenge</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 offset-md-1 col-md-10">
+                            <h3>“Research and develop what motion can add to the user experience and accessibility of the route planner page”</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="imgCentered col-12">
+                            <img src="assets/img/differentLogo.png" alt="different logo">
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section id="teamImage">
+                <div class="container-fluid">
+                    <div class="row">
+                        <img src="assets/img/teamImageDesktop.jpg" class="imgDesktop" alt="Different team SKIITTTSKITTTTT 🤙">
+                        <img src="assets/img/teamImageMobile.jpg" class="imgMobile" alt="Different team SKIITTTSKITTTTT 🤙">
+                    </div>
+                </div>
+            </section>
+
+            <section class="sectionSpaceTop sectionSpaceBottom" id="skip">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <h3>Can't wait?</h3>
+                            <a class="button button-primary" href="#" role="button">Skip to the case</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="sectionSpaceTop purpleBG" id="keyToSuccess">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <h2>The key to success</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 offset-md-3 col-md-6">
+                            <h5>Hier komt wellicht een introtekst die wat vertelt over wat de succesfactor precies is en waarom.</h5>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="cardFirst col-12 col-lg-4">
+                            <div class="card">
+                                <h4>Succesfactor 1</h4>
+                                <h3>Title</h3>
+                                <p>Dit gebeurt door verbeteringen voor de huidige gevonden en gedefinieerde pijnpunten door team diffərənt, theoretisch onderbouwd en praktisch getest¹, uit te werken, op te lossen en/of te verbeteren.</p>
+                            </div>
+                        </div>
+                        <div class="cardSecond col-12 col-lg-4">
+                            <div class="card">
+                                <h4>Succesfactor 2</h4>
+                                <h3>Title</h3>
+                                <p>Pijnpunten en de kwaliteit van de hiervoor gemaakte verbeteringen zijn te onderbouwen aan de hand van opgestelde principles, guidelines en rules. Deze principles, guidelines en rules zijn ook weer verder inzetbaar voor de ANWB in een verdere uitbreiding en het zelf oppakken van het ontwikkelen van een verdere motion design language.</p>
+                            </div>
+                        </div>
+                        <div class="cardThird col-12 col-lg-4">
+                            <div class="card">
+                                <h4>Succesfactor 3</h4>
+                                <h3>Title</h3>
+                                <p>Het geheel is duidelijk overdraagbaar en toepasbaar voor de ANWB, specifiek stakeholders Coen de Heer, Chloë Rice en Sanne Kloot zodat zij een onderbouwde beslissing kunnen maken over de ROI van het besteden van verdere ANWB-resources aan het verder werken aan motion design binnen hun design system.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="sectionSpaceTop sectionSpaceBottom" id="context">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <h2>Context</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 offset-md-2 col-md-8">
+                            <h5>During the minor User Interface and Experience Design we got the assignment to investigate en develop what motion can contribute to the user experience en accessibility of the ANWB online visitors digital experience. For this we had to make an extension to ANWB's Design System Poncho through principles and a rationale. </h5>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            
+            <section class="sectionSpaceBottom" id="whoDidWeWorkWith">
+                <div class="container">
+                    <div class="centeredRow row">
+                        <div class="col-12 col-md-6">
+                            <img src="assets/img/stakeholderMap.png" alt="Different stakeholdermap">
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <h4>stakeholders</h4>
+                            <h3>Who did we work with?</h3>
+                            <p>During the project we worked closely with various stakeholders. The product owners played the main role. We were able to inform these product owners about the progress through presentations, slack and various video calls.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="sectionSpaceTop purpleBG" id="research">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <h2>Research</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 offset-md-2 col-md-8">
+                            <h5>During the research phase, we collected many insights through interviews with users, usability testing of the current website and a lot of desk research into (Atomic based) Design Systems (including Poncho) and motion design.</h5>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="cardFirst col-12 col-lg-4">
+                            <div class="card">
+                                <h4>Discovery Phase</h4>
+                                <h3>Field research</h3>
+                                <p>Minimale motion en micro-interactions voor een zo simpel mogelijk product met </p>
+                            </div>
+                        </div>
+                        <div class="cardSecond col-12 col-lg-4">
+                            <div class="card">
+                                <h4>Discovery Phase</h4>
+                                <h3>Desk research</h3>
+                                <p>Minimale motion en micro-interactions voor een zo simpel mogelijk product met minimale sturing van de gebruiker.</p>
+                            </div>
+                        </div>
+                        <div class="cardThird col-12 col-lg-4">
+                            <div class="card">
+                                <h4>Discovery Phase</h4>
+                                <h3>UX-lab research</h3>
+                                <p>Minimale motion en micro-interactions voor een zo simpel mogelijk product met minimale sturing van de gebruiker.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="sectionSpaceTop" id="insights">
+                <div class="container">
+                    <div class="row">
+                        <div class="sticky col-12 col-md-3" id="insightsIntro">
+                            <h4>research</h4>
+                            <h3>Our important insights</h3>
+                            <p>Hier komt wellicht een introtekst die wat vertelt over waar we research naar hebben gedaan en waarom.</p>
+                        </div>
+                        <div class="col-12 col-md-9">
+                            <img src="assets/img/insightsANWB.png" alt="Insights about the ANWB Routeplanner">
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="sectionSpaceTop sectionSpaceBottom" id="concepting">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <h2>Concepting</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 offset-md-2 col-md-8">
+                            <h5>Based on all the insights from the research phase, we made a first version of the motion principles. When the first version of these principles had been set up, we were able to take this as the base for drafting concepts (guidelines).</h5>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="sectionSpaceBottom" id="goldenFilter">
+                <div class="container">
+                    <div class="centeredRow row">
+                        <div class="col-12 col-md-5">
+                            <img src="assets/img/golderFilter.png" alt="Golden Filter of UX">
+                        </div>
+                        <div class="col-12 offset-md-1 col-md-6">
+                            <h4>concepting</h4>
+                            <h3>The Golden Filter of UX</h3>
+                            <p>To learn how to design valuable guidelines as a team, we followed a workshop by Daniel de Wit. In this workshop we used his own developed methodology. The Golden Filter of UX ”(de Wit, 2019). A method where Human Centered Design combined with the Golden Filter serves as a "funnel" with guidelines. This includes both the business and user needs. </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="sectionSpaceTop sectionSpaceBottom purpleBG" id="research">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <h2>Probleemstelling</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 offset-md-2 col-md-8">
+                            <h5>By combining Jakob Nielson's 10 heuristics with the MOSCOW method, we were able to separate the most important guidelines for the project. We created two concept directions based on the insights from the research phase and the guidelines from The Golden Filter or UX.</h5>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section id="conceptCards">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 offset-lg-2 col-lg-4">
+                            <div class="card">
+                                <h4>Concept 1</h4>
+                                <h3>Hierarchy</h3>
+                                <p>Pijnpunten en de kwaliteit van de hiervoor gemaakte verbeteringen zijn te onderbouwen aan de hand van opgestelde principles, guidelines en rules. Deze principles, guidelines en rules zijn ook weer verder inzetbaar voor de ANWB in een verdere uitbreiding en het zelf oppakken van het ontwikkelen van een verdere motion design language.</p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-4" id="conceptChosen">
+                            <div class="card">
+                                <h4>Concept 2</h4>
+                                <h3>Motion design</h3>
+                                <p>Het geheel is duidelijk overdraagbaar en toepasbaar voor de ANWB, specifiek stakeholders Coen de Heer, Chloë Rice en Sanne Kloot zodat zij een onderbouwde beslissing kunnen maken over de ROI van het besteden van verdere ANWB-resources aan het verder werken aan motion design binnen hun design system.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="sectionSpaceTop sectionSpaceBottom" id="result">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <h2>The result</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 offset-md-2 col-md-8">
+                            <h5>Hier komt wellicht een introtekst die wat vertelt over waar we research naar hebben gedaan en waarom.</h5>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <img src="assets/img/prototypeMockup.png" alt="Different X ANWB final masterprototype mockup">
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+        </main>
+
         <!--CUSTOM JS-->
         <!-- <script type="text/javascript" src=""></script> -->
     </body>
