editted html to match LFS

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="videoWrapper">
                 <a class="cancelModal"><i class="far fa-times-circle"></i></a>
                 <video class="caseVideo" controls>
-                    <source src="assets/vid/vid_lang.mp4" type="video/mp4">
+                    <source src="assets/vid/vid_lang_lfs.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -55,7 +55,7 @@
                 <div class="row">
                     <div class="col-12 col-md-6">
                         <a class="button button-secondary activateModal">Play case-video</a>
-                        <!-- <a class="button button-secondary" href="assets/vid/different-anwb-casefilm.mp4" target="_blank" role="button">Play case-video</a> -->
+                        <!-- <a class="button button-secondary" href="assets/vid/different-anwb-casefilm_lfs.mp4" target="_blank" role="button">Play case-video</a> -->
                         <!-- <div class="button button-secondary activateModal">Check prototype</div> -->
                     </div>
                 </div>
@@ -321,7 +321,7 @@
                             <!-- <img src="assets/img/prototypeMockup.png" alt="Different X ANWB final masterprototype mockup"> -->
                             <div class="prototypeFrame">
                                 <video preload="auto" autoplay="" muted="" loop="" playsinline="" webkit-playsinline="">
-                                    <source src="assets/vid/prototypeFinal.mp4" type="video/mp4">
+                                    <source src="assets/vid/prototypeFinal_lfs.mp4" type="video/mp4">
                                 </video>
                             </div>
                         </div>
