Fixed proto moving mockup

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             <section id="conceptCards">
                 <div class="container">
                     <div class="row">
-                        <div class="col-12 offset-lg-2 col-lg-4">
+                        <div class="cardFirst col-12 offset-lg-2 col-lg-4">
                             <div class="card">
                                 <h4>Concept 1</h4>
                                 <h3>Hierarchy</h3>
