Added proto button

--- a/index.html
+++ b/index.html
@@ -326,6 +326,11 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-12" id="openPrototype">
+                            <a class="button button-secondary" href="https://differentdesigners.nl/prototypes/masterprototype.framer/" target="_blank" role="button">Check out the prototype</a>
+                        </div>
+                    </div>
                 </div>
             </section>
 
