fixed margin bug

--- a/index.html
+++ b/index.html
@@ -348,12 +348,12 @@
                         </div>
                     </div>
                     <div class="sectionSpaceTop row">
-                        <div class="col-12 col-md-4">
+                        <div class="cardFirst col-12 col-md-4">
                             <h4>guidelines</h4>
                             <h3>Blue sky</h3>
                             <p>To learn how to design valuable guidelines as a team, we followed a workshop by Daniel de Wit. In this workshop we used his own developed methodology. The Golden Filter of UX ”(de Wit, 2019).</p>
                         </div>
-                        <div class="col-12 col-md-4">
+                        <div class="cardSecond col-12 col-md-4">
                             <h4>guidelines</h4>
                             <h3>Sunbeam</h3>
                             <p>To learn how to design valuable guidelines as a team, we followed a workshop by Daniel de Wit. In this workshop we used his own developed methodology. The Golden Filter of UX ”(de Wit, 2019).</p>
