Updated shit for iPad and matrix images

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-12 offset-md-1 col-md-10">
+                        <div class="col-12 col-md-12 offset-xl-1 col-xl-10">
                             <h3>“Research and develop what motion can add to the user experience and accessibility of the route planner page”</h3>
                         </div>
                     </div>
@@ -115,8 +115,8 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-12 offset-md-3 col-md-6">
-                            <h5>Hier komt wellicht een introtekst die wat vertelt over wat de succesfactor precies is en waarom.</h5>
+                        <div class="col-12 offset-md-1 col-md-10 offset-xl-3 col-xl-6">
+                            <h5>To determine whether we have succesfully designed an expantion for the design system, we came up with a factor of success. This factor of succes is a way to measure the value of the concept.</h5>
                         </div>
                     </div>
                     <div class="row">
@@ -155,7 +155,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-12 offset-md-2 col-md-8">
+                        <div class="col-12 offset-md-1 col-md-10 offset-xl-3 col-xl-6">
                             <h5>During the minor <span class="purpleText">User Interface and Experience Design</span> we got the assignment to investigate en develop what motion can contribute to the user experience en accessibility of the ANWB online visitors digital experience. For this we had to make an extension to <span class="purpleText">ANWB's Design System Poncho</span> through principles and a rationale. </h5>
                         </div>
                     </div>
@@ -187,7 +187,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-12 offset-md-2 col-md-8">
+                        <div class="col-12 offset-md-1 col-md-10 offset-xl-3 col-xl-6">
                             <h5>During the research phase, we collected many insights through interviews with users, usability testing of the current website and a lot of desk research into (Atomic based) Design Systems (including Poncho) and motion design.</h5>
                         </div>
                     </div>
@@ -242,7 +242,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-12 offset-md-2 col-md-8">
+                        <div class="col-12 offset-md-1 col-md-10 offset-xl-3 col-xl-6">
                             <h5>Based on all the insights from the research phase, we made a first version of the motion principles. When the first version of these principles had been set up, we were able to take this as the base for drafting concepts (guidelines).</h5>
                         </div>
                     </div>
@@ -266,15 +266,15 @@
             </section>
 
             <!--POAR NEEM'N INTRO-->
-            <section class="sectionSpaceTop sectionSpaceBottom purpleBG" id="probleemstelling">
+            <section class="sectionSpaceTop sectionSpaceBottom purpleBG" id="problemStatement">
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
-                            <h2>Probleemstelling</h2>
+                            <h2>Problem Statement</h2>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-12 offset-md-2 col-md-8">
+                        <div class="col-12 offset-md-1 col-md-10 offset-xl-3 col-xl-6">
                             <h5>By combining Jakob Nielson's 10 heuristics with the MOSCOW method, we were able to separate the most important guidelines for the project. We created two concept directions based on the insights from the research phase and the guidelines from The Golden Filter or UX.</h5>
                         </div>
                     </div>
@@ -312,7 +312,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-12 offset-md-2 col-md-8">
+                        <div class="col-12 offset-md-1 col-md-10 offset-xl-3 col-xl-6">
                             <h5>Hier komt wellicht een introtekst die wat vertelt over waar we research naar hebben gedaan en waarom.</h5>
                         </div>
                     </div>
@@ -328,7 +328,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12" id="openPrototype">
-                            <a class="button button-secondary" href="https://differentdesigners.nl/prototypes/masterprototype.framer/" target="_blank" role="button">Check out the prototype</a>
+                            <a class="button button-secondary" href="https://differentdesigners.nl/prototypes/masterprototype.framer/" target="_blank" role="button">Check out the prototype (works best on desktop)</a>
                         </div>
                     </div>
                 </div>
@@ -376,8 +376,8 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-12 offset-md-2 col-md-8">
-                            <h5>Hier komt  een introtekst die wat vertelt over wat de matrix is en waar hij voor dient.</h5>
+                        <div class="col-12 offset-md-1 col-md-10 offset-xl-3 col-xl-6">
+                            <h5>In order to deliver our work in a way that the ANWB can easily  work with it themselfs, we have created the "motion-impact matrix". </h5>
                         </div>
                     </div>
                 </div>
@@ -387,32 +387,38 @@
             <section class="sectionSpaceBottom" id="motionMatrixExplained">
                 <div class="container">
                     <div class="centeredRow row">
-                        <div class="col-12 col-md-6">
+                        <div class="col-12 col-md-5 col-xl-6">
                             <div class="tab-content" id="myTabContent01">
-                                <div class="tab-pane fade show active" id="blueSky" role="tabpanel" aria-labelledby="home-tab">
-                                    <img src="assets/img/motionMatrix.png" alt="Our Motion Matrix model">
-                                </div>
-                                <div class="tab-pane fade" id="sunbeam" role="tabpanel" aria-labelledby="profile-tab">
-                                    <img src="assets/img/motionMatrix.png" alt="Our Motion Matrix model">
+                                <div class="tab-pane fade show active" id="sunbeam" role="tabpanel" aria-labelledby="profile-tab">
+                                    <img src="assets/img/motionMatrixSunbeam.png" alt="Our Motion Matrix model">
                                 </div>
                                 <div class="tab-pane fade" id="breezy" role="tabpanel" aria-labelledby="contact-tab">
-                                    <img src="assets/img/motionMatrix.png" alt="Our Motion Matrix model">
+                                    <img src="assets/img/motionMatrixBreezy.png" alt="Our Motion Matrix model">
                                 </div>
+                                <div class="tab-pane fade" id="blueSky" role="tabpanel" aria-labelledby="home-tab">
+                                    <img src="assets/img/motionMatrixBlueSky.png" alt="Our Motion Matrix model">
+                                </div>
+                                <!-- <div class="tab-pane fade" id="ideal" role="tabpanel" aria-labelledby="ideal-tab">
+                                    <img src="assets/img/motionMatrixIdeal.png" alt="Our Motion Matrix model">
+                                </div> -->
                             </div>
                         </div>
-                        <div class="col-12 col-md-6">
+                        <div class="col-12 col-md-7 col-xl-6">
                             <h4>subtitle</h4>
                             <h3>Fancypancy title</h3>
                             <ul class="nav nav-tabs" id="myTab01" role="tablist">
                                 <li class="nav-item">
-                                    <a class="nav-link button button-secondary active" id="blueSky-tab" data-toggle="tab" href="#blueSky" role="tab" aria-controls="breezy" aria-selected="true">Blue sky</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link button button-secondary" id="sunbeam-tab" data-toggle="tab" href="#sunbeam" role="tab" aria-controls="breezy" aria-selected="false">Sunbeam</a>
+                                    <a class="nav-link button button-secondary active" id="sunbeam-tab" data-toggle="tab" href="#sunbeam" role="tab" aria-controls="sunbeam" aria-selected="false">Sunbeam</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link button button-secondary" id="breezy-tab" data-toggle="tab" href="#breezy" role="tab" aria-controls="breezy" aria-selected="false">Breezy</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link button button-secondary" id="blueSky-tab" data-toggle="tab" href="#blueSky" role="tab" aria-controls="breezy" aria-selected="true">Blue sky</a>
+                                </li>
+                                <!-- <li class="nav-item">
+                                    <a class="nav-link button button-secondary" id="ideal-tab" data-toggle="tab" href="#ideal" role="tab" aria-controls="breezy" aria-selected="true">Ideal UX</a>
+                                </li> -->
                             </ul>
                             <p>To learn how to design valuable guidelines as a team, we followed a workshop by Daniel de Wit. In this workshop we used his own developed methodology. The Golden Filter of UX ”(de Wit, 2019). A method where Human Centered Design combined with the Golden Filter serves as a "funnel" with guidelines. This includes both the business and user needs.</p>
                         </div>
@@ -429,8 +435,8 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-12 offset-md-2 col-md-8">
-                            <h5>Hier komt  een introtekst die wat vertelt over wat de matrix is en waar hij voor dient.</h5>
+                        <div class="col-12 offset-md-1 col-md-10 offset-xl-3 col-xl-6">
+                            <h5>In order to test our guidelines and come up with specific rules we made as many prototypes as possible. We used Zach Johnston’s talk; Prototype to understand and prototype to be understood as inspiration.  </h5>
                         </div>
                     </div>
                 </div>
@@ -440,7 +446,7 @@
             <section class="sectionSpaceBottom" id="prototypingExplained">
                 <div class="container">
                     <div class="centeredRow row">
-                        <div class="col-12 col-md-6">
+                        <div class="col-12 col-md-7 col-xl-6">
                             <h4>prototyping</h4>
                             <h3>Our way of work</h3>
                             <ul class="nav nav-tabs" id="myTab02" role="tablist">
@@ -462,7 +468,7 @@
                             </ul>
                             <p>It was important for us to make as many prototypes and test rounds as possible in order to test the guidelines and draw up specific rules. We took the talk; prototype to understand and prototype to be understood by zach Johnston as the starting point for prototyping. </p>
                         </div>
-                        <div class="col-12 col-md-6">
+                        <div class="col-12 col-md-5 col-xl-6">
                             <div class="tab-content" id="myTabContent02">
                                 <div class="tab-pane fade show active" id="framer" role="tabpanel" aria-labelledby="framer-tab">
                                     <h3>Framer</h3>
